feat: add new api view campus config